Poster, Group 모아서 Icon Component 제작

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,24 @@
-@import './_define';
+@import "./_define";
 
-.app-wrapper{
-    margin: 0 auto;
-    padding: 0 30px;
-    max-width: 430px;
-    min-height: 100vh;
-    border:1px solid #ccc;
-    
-    @include mediaMax($autoWidth){
-        max-width: 100%;
-    }
+.app-wrapper {
+  margin: 0 auto;
+  padding: 0 30px;
+  max-width: 430px;
+  min-height: 100vh;
+  border: 1px solid #ccc;
+
+  @include mediaMax($autoWidth) {
+    max-width: 100%;
+  }
 }
 
-.poster-wrapper{
-    display: flex;
-    justify-content: space-between;
-    margin: 10% 0;
+.poster-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 10% 0;
+}
+
+.group-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
