Basic Modal (띄우기, 닫기, 스타일)

--- a/src/_define.scss
+++ b/src/_define.scss
@@ -1,16 +1,15 @@
-$defaul-font-color: #333;
+$default-font-color: #333;
 
 $autoWidth: 425px;
 
-
-@mixin mediaMax($tarW){
-    @media all and (max-width: $tarW) {
-        @content;
-    }
+@mixin mediaMax($tarW) {
+  @media all and (max-width: $tarW) {
+    @content;
+  }
 }
 
-@mixin mediaMin($tarW){
-    @media all and (min-width: $tarW) {
-        @content;
-    }
+@mixin mediaMin($tarW) {
+  @media all and (min-width: $tarW) {
+    @content;
+  }
 }
