--- a/src/reset.scss
+++ b/src/reset.scss
@@ -84,7 +84,7 @@ video {
 html,
 body {
   height: 100%;
-  color: $defaul-font-color;
+  color: $default-font-color;
   font-size: 14px;
 }
 
@@ -128,7 +128,7 @@ a {
   padding: 0;
   background: transparent;
   text-decoration: none;
-  color: $defaul-font-color;
+  color: $default-font-color;
 }
 
 /* change colours to suit your needs */
