--- a/src/common.scss
+++ b/src/common.scss
@@ -1,16 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @font-face {
-  font-family: "국립박물관문화재단클래식B";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/국립박물관문화재단클래식B.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
+	font-family: '국립박물관문화재단클래식B';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/국립박물관문화재단클래식B.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 
 * {
-  font-family: "Noto Sans KR", sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
 }
 
 .prevent-scroll {
-  overflow: hidden;
+	overflow: hidden;
+}
+
+.text-hidden {
+	overflow: hidden;
+	position: absolute;
+	border: 0;
+	width: 1px;
+	height: 1px;
+	clip: rect(1px, 1px, 1px, 1px);
 }
