--- a/src/Component/Input/Input.scss
+++ b/src/Component/Input/Input.scss
@@ -1,66 +1,104 @@
-@import '../../define';
+@import "../../define";
 
-.input-box {
-	display: flex;
-	align-items: center;
-	padding: 5px 0;
-	&:first-child {
-		padding-top: 0;
-	}
-	&:last-child {
-		padding-bottom: 0;
-	}
-	label {
-		width: 80px;
-		@include mediaMax($autoWidth - 1) {
-			width: 70px;
-		}
-	}
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+  &:last-child {
+    padding-bottom: 0;
+  }
+  label {
+    width: 80px;
+    @include mediaMax($autoWidth - 1) {
+      width: 70px;
+    }
+  }
 
-	.datepicker-header {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		padding: 0 1rem;
-		.month-day {
-			font-size: 18px;
-			font-weight: 900;
-		}
-	}
+  .datepicker-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+    .month-day {
+      font-size: 18px;
+      font-weight: 900;
+    }
+  }
 }
 
 .react-datepicker-wrapper {
-	display: block;
-	width: auto;
-	flex: 0.5;
+  display: block;
+  width: auto;
+  flex: 0.5;
 }
 .react-datepicker__header {
-	border-bottom: 0;
-	background-color: #fff;
+  border-bottom: 0;
+  background-color: #fff;
 }
 .react-datepicker__day {
-	width: 24px;
-	height: 24px;
-	border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
 }
 .react-datepicker__day--in-range {
-	color: #fff;
-	background-color: #333;
+  color: #fff;
+  background-color: #333;
 }
 .input-box {
-	display: flex;
-	align-items: center;
-	flex: 1;
+  display: flex;
+  align-items: center;
+  flex: 1;
 }
 
 .input-connect {
-	padding: 0 3px;
+  padding: 0 3px;
 }
 
-input {
-	width: 100%;
-	padding: 10px 10px;
-	border: 1px solid #ddd;
-	outline: none;
-	background: transparent;
+.input-unit {
+  padding: 6px;
+  text-align: center;
+  &:last-child {
+    padding-right: 0;
+  }
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px 10px;
+  border: 1px solid #ddd;
+  outline: none;
+  background: transparent;
+}
+
+.input-checkbox {
+  justify-content: flex-end;
+  label {
+    width: auto;
+    display: flex;
+    align-items: center;
+    &:after {
+      content: "";
+      display: block;
+      width: 20px;
+      height: 20px;
+      margin-left: 10px;
+      border-radius: 3px;
+      border: 2px solid #ddd;
+      background-repeat: no-repeat;
+      background-size: 20px 20px;
+      background-position: center center;
+      background-image: url("/asset/images/check-ico-disabled.png");
+    }
+  }
+  input:checked {
+    & + label {
+      &:after {
+        border-color: #333;
+        background-color: #333;
+        background-size: 20px 20px;
+        background-position: center center;
+        background-image: url("/asset/images/check-ico-checked.png");
+      }
+    }
+  }
 }
