Footer position 수정

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 .app-wrapper {
   position: relative;
   margin: 0 auto;
+  padding-bottom: 150px;
   max-width: 430px;
   min-height: 100vh;
   border: 1px solid #cccccc;
