--- a/src/Component/Footer/Footer.scss
+++ b/src/Component/Footer/Footer.scss
@@ -1,6 +1,8 @@
 .footer-wrapper {
-  margin-top: 150px;
-  padding-bottom: 50px;
+  position: absolute;
+  left: 0;
+  bottom: 50px;
+  width: 100%;
   font-size: 12px;
   text-align: center;
   color: #bbb;
