--- a/src/Component/Form/Act/Act.scss
+++ b/src/Component/Form/Act/Act.scss
@@ -1,3 +1,5 @@
+@import "../../../_define";
+
 .act-poster {
   margin-bottom: 20px;
   height: auto;
@@ -74,10 +76,25 @@ h2 {
   }
 }
 
+.remove-add-seat {
+  width: 80px;
+  @include mediaMax($autoWidth - 1) {
+    width: 70px;
+  }
+  button {
+    padding: 3px 5px;
+    font-size: 11px;
+    color: $default-red-color;
+    border: 1px solid $default-red-color;
+    border-radius: 3px;
+  }
+}
+
 button {
   &.add-seat {
     margin-top: 5px !important;
     border: 1px dashed #333 !important;
+    border-radius: 3px;
   }
   &.add-photo {
     position: relative;
