--- a/src/Component/Form/Act/Act.scss
+++ b/src/Component/Form/Act/Act.scss
@@ -109,3 +109,14 @@ button {
     }
   }
 }
+
+.photo-label {
+  &.added {
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    &:before {
+      content: "";
+    }
+  }
+}
