main 페이지 (작품, 집단 리스트)

--- a/src/Component/Form/Act/Act.scss
+++ b/src/Component/Form/Act/Act.scss
@@ -112,7 +112,7 @@ button {
 
 .photo-label {
   &.added {
-    background-size: contain;
+    background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     &:before {
