--- a/src/Component/Button/Button.scss
+++ b/src/Component/Button/Button.scss
@@ -6,10 +6,12 @@
   height: 100%;
   margin: 0 -5px;
 
-  button {
+  button,
+  a {
     flex: 1;
     margin: 0 5px;
     padding: 11px 3px;
+    text-align: center;
     border-radius: 3px;
 
     &.type-black {
